<resources>
    <string name="app_name">Komunikacja Miejska Szczecin</string>

    <string name="owner_email">zienowicz.pawel@gmail.com</string>
    <string name="owner_phone">tel:509207723</string>
    <string name="email_title">Reklama - Komunikacja Miejska Szczecin</string>

    <string name="dialog_title">Witamy!</string>
    <string name="close">Zamknij</string>
    <string name="do_not_show_more">Nie pokazuj więcej</string>
    <string name="info">Lokalizacja pojazdów jest przybliżona. Nie są widoczne pojazdy, które nie przekazują informacji o swoim położeniu. Dane o lokalizacji odświeżają się co około 30 sekund.
        \n\nAplikacja nieoficjalna. Korzysta ona z danych podchodzących ze strony http://zditm.szczecin.pl. Proszę mieć na uwadze, że system czasem może nie działać (lub działać wolno) i nie jest to zależne od aplikacji.
    </string>
    <string name="no_internet">Brak połączenia z internetem</string>
    <string name="refresh">Odśwież</string>
    <string name="clear_filter">Pokaż wszystkie</string>

    <string name="normal_tram_lines">Linie tramwajowe dzienne zwykłe</string>
    <string name="extra_tram_lines">Linie tramwajowe dzienne dodatkowe</string>
    <string name="substitute_tram_lines">Linie tramwajowe dzienne zastępcze</string>
    <string name="touristic_tram_lines">Linie tramwajowe dzienne turystyczne</string>
    <string name="normal_bus_lines">Linie autobusowe dzienne zwykłe</string>
    <string name="normal_bus_lines_on_demand">Linie autobusowe dzienne zwykłe - transport na żądanie</string>
    <string name="special_bus_lines">Linie autobusowe dzienne pospieszne</string>
    <string name="night_bus_lines">Linie autobusowe nocne</string>
    <string name="night_substitute_bus_lines">Linie autobusowe nocne zastępcze</string>
    <string name="substitute_bus_lines">Linie autobusowe dzienne zastępcze</string>
    <string name="extra_bus_lines">Linie autobusowe dzienne dodatkowe</string>
    <string name="touristic_bus_lines">Linie autobusowe dzienne turystyczne</string>

    <string name="set_favourite_action">Dodaj lub usuń mapę z ulubionych</string>
    <string name="line_list">Lista linii</string>
    <string name="information">Informacje</string>
    <string name="schedule_board_short">Tablica</string>
    <string name="favourites">Ulubione</string>
    <string name="settings">Ustawienia</string>
    <string name="discussions">Dyskusje</string>
    <string name="more">Więcej</string>
    <string name="favourites_description">Szybki dostęp do najczęściej używanych przystanków i połączeń.</string>
    <string name="favourite_stops">Przystanki</string>
    <string name="favourite_connections">Połączenia</string>
    <string name="favourite_maps">Mapy</string>
    <string name="add_favourite_stop">Dodaj przystanek</string>
    <string name="add_favourite_connection">Dodaj połączenie</string>
    <string name="no_favourite_stops">Nie masz jeszcze ulubionych przystanków.</string>
    <string name="no_favourite_connections">Nie masz jeszcze ulubionych połączeń.</string>
    <string name="no_favourite_lines">Nie masz jeszcze ulubionych map.</string>
    <string name="remove_favourite_stop">Usuń przystanek z ulubionych</string>
    <string name="remove_favourite_connection">Usuń połączenie z ulubionych</string>
    <string name="remove_favourite_line">Usuń mapę z ulubionych</string>
    <string name="confirm_delete_title">Usunąć z ulubionych?</string>
    <string name="confirm_delete_stop">Przystanek "%s" zostanie usunięty z ulubionych.</string>
    <string name="confirm_delete_connection">Połączenie "%s" zostanie usunięte z ulubionych.</string>
    <string name="confirm_delete_line">Mapa "%s" zostanie usunięta z ulubionych.</string>
    <string name="delete">Usuń</string>
    <string name="select_favourite_connection">Wybierz połączenie</string>
    <string name="no_connections_to_add">Brak odjazdów do dodania</string>
    <string name="loading_departures">Pobieranie odjazdów...</string>
    <string name="departures_request_error">Nie udało się pobrać odjazdów</string>
    <string name="departures_rate_limit_error">Przekroczono limit, spróbuj za chwilę</string>
    <string name="no_departures">Brak najbliższych odjazdów</string>
    <string name="departing_now">teraz</string>
    <string name="departing_in_minutes">za %d min</string>
    <string name="departing_at_time">o %s</string>
    <string name="add_favourite_line_success">Dodano do ulubionych</string>
    <string name="remove_favourite_line_success">Usunięto z ulubionych</string>
    <string name="default_map">Wszystkie linie</string>
    <string name="map">Mapa</string>
    <string name="favourite_line_title">Linia %s</string>

    <string name="lines_request_error">Nie udało się pobrać linii</string>
    <string name="info_request_error">Nie udało się pobrać aktualności</string>
    <string name="stops_request_error">Nie udało się pobrać przystanków</string>
    <string name="changes">Zmiany w rozkładach jazdy</string>
    <string name="no_changes">Brak aktualności</string>
    <string name="ad">Reklama</string>
    <string name="ad_text">Chciałbyś zobaczyć tu swoją reklamę?</string>
    <string name="ad_latamy"><b>latamy.szczecin.pl</b> - profesjonalne nagrania z drona</string>
    <string name="ad_flats">Chcesz sprzedać <b>szybko</b> mieszkanie? Zadzwoń: 509-207-723</string>

    <string name="from_date">Od %s</string>
    <string name="to_date">do %s</string>
    <string name="contact_us">Napisz</string>
    <string name="check">Sprawdź</string>
    <string name="call">Zadzwoń</string>
    <string name="understand">Rozumiem</string>

    <string name="type_bus_stop_number">Podaj numer przystanku</string>
    <string name="scan_bus_stop_number">Zeskanuj kod przystanku</string>
    <string name="bus_stop_description">Znajduje się on na wiacie przystankowej lub słupku.</string>
    <string name="scan_bus_stop_description">Niektóre przystanki posiadają oprócz numeru, specjalny kod QR który można łatwo i szybko zeskanować. Niestety nie wszystkie, ale liczymy, że ZDiTM szybko to zmieni.</string>
    <string name="incorrect_bus_stop">Nieprawidłowy numer przystanku</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="scan_code">Skanuj kod</string>
    <string name="widgets">Widgety</string>
    <string name="active_widgets">Aktywne widgety</string>
    <string name="add_widget">Możesz dodać widget przyciskiem poniżej. Jeśli urządzenie tego nie obsługuje, przytrzymaj palec na ekranie głównym telefonu, wybierz "Widgety", znajdź "Komunikacja Miejska Szczecin" i przytrzymaj widget, aby dodać go na ekran. Po dodaniu widget pojawi się na liście poniżej.</string>
    <string name="add_widget_action">Dodaj widget</string>
    <string name="no_active_widgets">Nie masz jeszcze aktywnych widgetów.</string>
    <string name="widget_without_stop">Widget bez wybranego przystanku</string>
    <string name="tap_to_configure_widget">Kliknij, aby wybrać przystanek</string>
    <string name="pin_widget_not_supported">Dodawanie widgetu z aplikacji nie jest obsługiwane na tym urządzeniu.</string>

    <string name="payment_success">Dziękujemy za wsparcie! Premium odblokowane.</string>
    <string name="payment_cancel">Mamy nadzieję że zmienisz zdanie :)</string>
    <string name="payment_error">Wystąpił błąd, spróbuj ponownie lub skontaktuj się z nami</string>
    <string name="premium_title">Odblokuj pełną wygodę</string>
    <string name="premium_product_icon">Ikona produktu premium</string>
    <string name="premium_limit_reached">Osiągnięto limit wersji darmowej. Premium daje więcej miejsca na codzienne przystanki, połączenia i mapy.</string>
    <string name="premium_benefit_favourite_stops">Więcej ulubionych przystanków</string>
    <string name="premium_benefit_favourite_connections">Więcej ulubionych połączeń</string>
    <string name="premium_benefit_favourite_maps">Więcej ulubionych map</string>
    <string name="premium_benefit_widgets">Widgety z odjazdami na ekranie telefonu</string>
    <string name="premium_benefit_dark_mode">Tryb ciemny aplikacji</string>
    <string name="premium_price_loading">Ładowanie ceny...</string>
    <string name="premium_lifetime_access">Jednorazowy zakup. Dożywotni dostęp.</string>
    <string name="buy_premium">Kup Premium</string>
    <string name="buy_premium_with_price">Kup Premium za %s</string>
    <string name="debug_premium_products_consumed">Produkty premium skonsumowane</string>
    <string name="debug_no_premium_products_to_consume">Brak produktów premium do skonsumowania</string>

    <string name="camera_permission_description">Potrzebujemy tego uprawnienia aby za pomocą aparatu zeskanować kod QR.</string>
    <string name="permissions_needed">Potrzebne uprawnienia</string>
    <string name="alarm_permission_needed">Przyznaj aplikacji dostęp do alarmów i przypomnień aby widgety mogły być odświeżane automatycznie</string>

    <string name="refresh_widgets_every">Odświeżaj widgety co</string>
    <string name="seconds">sekund(y)</string>
    <string name="open_links_external_browser">Otwieraj linki w zewnętrznej przeglądarce.</string>
    <string name="dark_mode">Tryb ciemny</string>

    <string name="edit">Edytuj</string>
    <string name="error_occurred">Wystąpił błąd, pracujemy już nad tym</string>

    <string-array name="headers">
        <item>Lp</item>
        <item>Numer</item>
        <item>Przystanek</item>
        <item/>
    </string-array>
</resources>
