<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:id="@+id/label1"
                android:text="@string/changes" />

            <pl.pzienowicz.zditmszczecinlive.compontent.MyListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                />

            <TextView
                android:id="@+id/noInfoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_changes"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:id="@+id/label2"
                android:text="@string/ad" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/ad_flats"/>

                <Button
                    android:id="@+id/ad2Button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/call"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/ad_text"/>

                <Button
                    android:id="@+id/contactUsBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:layout_gravity="center"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    </FrameLayout>

</RelativeLayout>
